tests/baselines/reference/parserES5ForOfStatement16.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement16.ts(1,1): error TS9003: For...of statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement16.ts (1 errors) ====
    for (var {a, b} of X) {
    ~~~
!!! error TS9003: For...of statements are not currently supported.
    }